crates/swc/tests/tsc-references/types/primitives/boolean/invalidBooleanAssignments/input.ts/es5.1.normal/output.js
function _classCallCheck(instance, Constructor) {
    if (!(instance instanceof Constructor)) {
        throw new TypeError("Cannot call a class as a function");
    }
}
var x = true;
var a1 = x;
var b = x;
var c = x;
var d = x;
var E;
(function(E) {
    E[E["A"] = 0] = "A";
})(E || (E = {
}));
var e = x;
var C = function C() {
    "use strict";
    _classCallCheck(this, C);
};
var f = x;
var g = x;
var h = x;
var h2 = x; // no error
var M;
(function(M) {
    M.a = 1;
})(M || (M = {
}));
M = x;
function i(a) {
    a = x;
}
i = x;
